--- a/recife.html
+++ b/recife.html
@@ -11,6 +11,7 @@
         <ul>
             <li>Historia</li>
             <li>Preços de Hoteis</li>
+            <li>Pontos Turisticos</li>
         </ul>
     </Header>
     <main>
