--- a/recife.html
+++ b/recife.html
@@ -11,7 +11,7 @@
         <ul>
             <li>Historia</li>
             <li>Preços de Hoteis</li>
-            <li>Pontos Turisticos</li>
+            <a href="pontos.html"> Pontos Turisticos </a>
         </ul>
     </Header>
     <main>
