--- a/recife.html
+++ b/recife.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Marco Zero</title>
 </head>
 <body>
     <Header>
-        <h1>Marco Zero</h1>
+        <h1 class="title01">Marco Zero</h1>
         <ul>
             <li>Historia</li>
             <li>Preços de Hoteis</li>
@@ -15,9 +16,8 @@
         </ul>
     </Header>
     <main>
-        <h1>Marco Zero</h1>
-        <h2>Está esperando o que para conhecer o Recife?</h2>
-        <img src="Marco.jpeg" alt="Marco Zero">
+        <h3>Está esperando o que para conhecer o Recife?</h3>
+        <img src="Marco.jpeg" alt="Marco Zero" class="imagem">
         <p> O <strong>Marco Zero</strong> do <strong>Recife</strong>, localizado na Praça Rio Branco, é o ponto de referência inicial da cidade. Além de sua importância histórica, é um local culturalmente significativo, frequentemente usado para eventos e comemorações. Oferece uma vista do Rio Capibaribe e está cercado por edifícios históricos, sendo um destino turístico popular na cidade.</strong></p>
     </main>
     <footer>
